# xlang

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  nuget.config
platform/: CMakeLists.txt  cache_string.h  common_memory.cpp  opaque_string_wrapper.h  pal.h  pal_internal.h  runtime.cpp  string_abi.cpp  string_allocate.h  string_base.h  string_convert.h  string_reference.h  strings.cpp  win32_exports.def  win32_memory.cpp  win32_string_convert.cpp  win32_strings.cpp
platform/published/: pal.h
samples/meta_reader/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CMakeSettings.json  Directory.Build.Props  readme.md
src/UndockedRegFreeWinRT/: Directory.Build.props  README.md  UndockedRegFreeWinRT.sln  build.cmd  build.ps1  test.cmd  test.ps1
src/UndockedRegFreeWinRT/EmbeddedManifestTest/: EmbeddedManifestTest.vcxproj  EmbeddedManifestTest.vcxproj.filters  embedded_manifest_test.cpp
src/UndockedRegFreeWinRT/EmbeddedTestComponent/: EmbeddedTestComponent.manifest  EmbeddedTestComponent.vcxproj  Resource.rc
src/UndockedRegFreeWinRT/ManifestParserTest/: ManifestParserTest.cpp  ManifestParserTest.vcxproj  validateDependentManifestAssemblyHuntSequence.root.manifest  validateDependentManifestAssemblyHuntSequence.sub.manifest  validateDependentManifestCircular.root.manifest  validateDependentManifestMix.root.manifest  validateDependentManifestMix.sub1.1.manifest  validateDependentManifestMix.sub1.manifest  validateDependentManifestMix.sub2.manifest  validateDllPathLayout.manifest  winrtActivation.dll2.manifest  winrtActivation.merged.manifest
src/UndockedRegFreeWinRT/Nuget/: Microsoft.Windows.UndockedRegFreeWinrt.nuspec  Microsoft.Windows.UndockedRegFreeWinrt.targets  readme.txt
src/UndockedRegFreeWinRT/TestComp/: TestComp.vcxproj  TestComp.vcxproj.filters  test_comp.cpp
src/UndockedRegFreeWinRT/TestComponent/: Class.cpp  Class.h  Class.idl  TestComponent.vcxproj  TestComponent.vcxproj.filters  pch.h  targetver.h
src/UndockedRegFreeWinRT/UndockedRegFreeWinRT/: TypeResolution.cpp  TypeResolution.h  UndockedRegFreeWinRT.vcxproj  UndockedRegFreeWinRT.vcxproj.filters  catalog.cpp  catalog.h  dllmain.cpp  extwinrt.h  typeresolution.cpp  typeresolution.h  winrtact.def
src/UndockedRegFreeWinRT/UndockedRegFreeWinRTManagedTest/: Program.cs  UndockedRegFreeWinRTManagedTest.csproj  app.manifest
src/UndockedRegFreeWinRT/UndockedRegFreeWinRTTest/: UndockedRegFreeWinRTTest.vcxproj  UndockedRegFreeWinRTTest.vcxproj.filters  main.cpp  test_apartment_activation.cpp
src/UndockedRegFreeWinRT/detours/: detours.vcxproj
src/UndockedRegFreeWinRT/mwinrtact/: Class1.cs  mwinrtact.cs
src/foundation/: xlang_foundation.il
src/package/: CMakeLists.txt
src/package/abi/: LICENSE  Microsoft.Windows.AbiWinRT.IdlGen.targets  Microsoft.Windows.AbiWinRT.nuspec  Microsoft.Windows.AbiWinRT.props  Microsoft.Windows.AbiWinRT.targets  readme.txt
src/package/cppwinrt/: CMakeLists.txt
src/package/midlrt/: Microsoft.Windows.MidlRT.IdlGen.targets  Microsoft.Windows.MidlRT.props  Microsoft.Windows.MidlRT.targets  readme.md
src/package/natvis/: CMakeLists.txt  Cpp.props  cppwinrt.natvis  cppwinrt_visualizer.cpp  cppwinrtvisualizer.vcxproj  object_visualizer.cpp  pch.h
src/package/nuget/: CMakeLists.txt  Microsoft.Windows.CppWinRT.nuspec  Microsoft.Windows.CppWinRT.props  Microsoft.Windows.CppWinRT.targets  readme.md  readme.txt
src/package/pywinrt/: readme.txt
src/package/vsix/: CMakeLists.txt  readme.md  source.extension.vsixmanifest  vsix.csproj  vsix.sln
src/platform/: CMakeLists.txt  activation_abi.cpp  cache_string.h  common_activation.cpp  common_string_convert.cpp  error_abi.cpp  heap_string.h  opaque_string_wrapper.h  pal_error.h  pal_internal.h  platform_activation.h  simple_unicode_converter.h  string_abi.cpp  string_allocate.h  string_base.h  string_traits.h  win32_activation.cpp  win32_pal_internal.h  win32_string_convert.cpp  xlang_foundation.il
src/platform/helpers/: pal_error.h
src/platform/published/: pal.h
src/pywinrt/: PyWinRT.sln  setup.py
src/pywinrt/AzurePipelinesTemplates/: job-package-projection.yml  steps-build-projection.yml  steps-package-projection.yml  steps-sign-projection.yml
src/pywinrt/PyWinRT-code/: strings.cpp  strings.h
src/pywinrt/os-projection/: generate.bat  os-projection.vcxproj  os-projection.vcxproj.filters  packages.config  stage-files.bat
src/pywinrt/pywinrt/: decl_prefix.txt  pch.h  pywinrt.vcxproj  pywinrt.vcxproj.filters  strings.bat
src/scripts/: bionicBuild.ps1  bionicBuild.sh  configureBionic.sh  mdExts.js  metadataReaderDebugVisualizers.js  scorch.cmake  windowsBuild.ps1  wslBionicBuild.ps1  wslConfigureBionic.sh
src/scripts/ubuntu/: Dockerfile  azure-pipelines.yml  build.sh  configure.sh  docker-build.cmd  docker-build.ps1
src/scripts/windows/: Dockerfile  azure-pipelines.yml  build.cmd  call-batchfile.bat
src/test/: CMakeLists.txt
src/test/abi_component/: CMakeLists.txt  iwidget.h  widget.cpp
src/test/component/: CMakeLists.txt  Component.Composable.Derived.h  module.def  pch.h  xlang_factory_adapter.cpp
src/test/cpp/: pch.h  (+8 more)
src/tool/: CMakeLists.txt  Directory.Build.Targets  Strings.props
src/winrt/: CMakeLists.txt  Microsoft.Windows.UndockedRegFreeWinrt.nuspec  Microsoft.Windows.UndockedRegFreeWinrt.targets  init.cmd  readme.txt
test/cpp/: CMakeLists.txt  cmd_reader.cpp  main.cpp  meta_reader_cache.cpp  meta_reader_filter.cpp  pch.h  simple.cpp
test/platform/: CMakeLists.txt  memory.cpp  pch.h  string_helpers.h
tool/compare/: CMakeLists.txt  compare.sln  compare.vcxproj  main.cpp  pch.h
tool/cpp/: CMakeLists.txt  code_writers.h  cpp.sln  cpp.vcxproj  cpp.vcxproj.filters  file_writers.h  helpers.h  main.cpp  pch.h  settings.h  strings.cmd  strings.cpp  strings.h  type_writers.h
tool/dump/: CMakeLists.txt  Windows.Foundation.winmd  dump.sln  dump.vcxproj  main.cpp  pch.h
tool/idl/: CMakeLists.txt  idl.sln  idl.vcxproj  main.cpp  pch.h
tool/python/: CMakeLists.txt  code_writers.h  file_writers.h  helpers.h  main.cpp  pch.h  settings.h  type_writers.h
(+2114 files in other folders)
